@@ -559,7 +559,6 @@
 				F587859802DE375901EA4122,
 				F587859902DE375901EA4122,
 				F587859A02DE375901EA4122,
-				F587859B02DE375901EA4122,
 				F587859C02DE375901EA4122,
 				F587859D02DE375901EA4122,
 				F587859E02DE375901EA4122,
@@ -4213,12 +4212,6 @@
 			path = kwq/KWQKPartsEvent.mm;
 			refType = 4;
 		};
-		F587850902DE375901EA4122 = {
-			isa = PBXFileReference;
-			name = KWQKPrinter.mm;
-			path = kwq/KWQKPrinter.mm;
-			refType = 4;
-		};
 		F587850A02DE375901EA4122 = {
 			isa = PBXFileReference;
 			name = KWQKProtocolManager.mm;
@@ -5055,12 +5048,6 @@
 		};
 		F587859A02DE375901EA4122 = {
 			fileRef = F587850802DE375901EA4122;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		F587859B02DE375901EA4122 = {
-			fileRef = F587850902DE375901EA4122;
 			isa = PBXBuildFile;
 			settings = {
 			};
@@ -6375,7 +6362,6 @@
 				F587864E02DE3A9A01EA4122,
 				F587850602DE375901EA4122,
 				F587864F02DE3A9A01EA4122,
-				F587850902DE375901EA4122,
 				F587865002DE3A9A01EA4122,
 				F587850A02DE375901EA4122,
 				F587865102DE3A9A01EA4122,
