@@ -1,72 +1,0 @@
-/*
- * Copyright (C) 2001, 2002 Apple Computer, Inc.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- * 1. Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer.
- * 2. Redistributions in binary form must reproduce the above copyright
- *    notice, this list of conditions and the following disclaimer in the
- *    documentation and/or other materials provided with the distribution.
- *
- * THIS SOFTWARE IS PROVIDED BY APPLE COMPUTER, INC. ``AS IS'' AND ANY
- * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
- * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
- * PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL APPLE COMPUTER, INC. OR
- * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
- * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
- * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
- * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
- * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
- * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
- */
-
-#import <kprinter.h>
-#import <kwqdebug.h>
-
-KPrinter::KPrinter(QPrinter::PrinterMode)
-{
-    _logNeverImplemented();
-}
-
-bool KPrinter::setup(QWidget *parent)
-{
-    _logNeverImplemented();
-    return FALSE;
-}
-
-
-bool KPrinter::newPage()
-{
-    _logNeverImplemented();
-    return FALSE;
-}
-
-
-void KPrinter::setDocName(const QString &)
-{
-    _logNeverImplemented();
-}
-
-
-void KPrinter::setCreator(const QString &)
-{
-    _logNeverImplemented();
-}
-
-
-void KPrinter::setFullPage(bool)
-{
-    _logNeverImplemented();
-}
-
-
-QSize KPrinter::margins() const
-{
-    _logNeverImplemented();
-    return QSize(0,0);
-}
-
-
